--- a/services/auth-services/.env
+++ b/services/auth-services/.env
@@ -1,4 +1,4 @@
-PORT=5001
+PORT= process.env.PORT || 5001
 MONGO_URI=mongodb+srv://piyushnagose204_db_user:Piyush123@cluster0.iy3skww.mongodb.net/?appName=Cluster0
 
 JWT_SECRET=super_access_secret_change_me
